adding external css

--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
       border-collapse: collapse;
       padding: 15px;
     }
-    
 </style>
+<link rel="stylesheet" href="styles/Stylesheet.css" >
+
 <body>
     <h1>First heading</h1>
     <p>This is a table </p>
