delete unnecessary text

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <p> Maggy is the first born</p>
 </div>
 <div class="names">
-<h1> Triza</h1>sss
+<h1> Triza</h1>
 <p> Triza is the second born</p>
 </div>
 <div class=" names">
